+ Miscellaneous: Add button to export key bindings
+ Add the ability to choose the scale factor (relative to the screen size) for
  the auto-fit zoom
+ Internal Subtitles Renderer: Show all subtitles tracks in the Play -> Subtitles menu.
  That includes all the embedded tracks exhibited by the source filter and the external tracks.
+ Tickets #1025, #1054, Add the ability to select the default track directly by its number
  in MPC-HC and the standalone MPEG Splitter.
+ Ticket #2050, Add Romanian translation
+ Add a new shader that over brightens with gradient from the bottom to the top of the screen.
  It needs LCD monitors with low viewing angle (~170/160).
* UI: Use a more native look and feel for the options dialog tree
* More resilient support for MPL2 and SRT subtitles formats:
  - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
    supported but MPL2 files that use MicroDVD tags for formatting are quite common.
  - Support SRT files with missing millisecond part in the timecodes.
* Re-enable the option to bypass the DVD/BD path selection. The user won't be asked to choose
  the location of the DVD/BD player (or folder) when this option is enabled.
* Ticket #1620, UI: Use the new styled radio bullet for menu's items
* Updated FFmpeg (n0.8-18760-g4e2c636)
* Updated Little CMS to v2.4 (git ff060c3)
* Updated Logitech SDK to v3.01 (driver 8.00.100)
* Updated SoundTouch to v1.7.1 r170
* Updated VirtualDub to v1.10.4-test1
* Updated Basque, Czech, German, Greek, Russian, Simplified Chinese, Slovak and Ukrainian translations
! Various WebUI fixes:
  - Fix seeking
  - Fix volume slider going out of bounds with IE in player.html
  - Fix incorrect encoding of the parent directory's path in browser.html
! MPCVideoDecoder: Fix low merit internal filter
! MPCVideoDecoder: The "Read Aspect Ratio from stream" option didn't always work right
! DVB EPG: Some strings weren't correctly displayed in some cases